--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Feed RSS com filtro</h1>
-        <form action="/rss" method="get">
+        <form action="rss" method="get">
             <div class="form-group">
                 <label for="url">URL do feed RSS:</label>
                 <input type="url" class="form-control" id="url" name="url" required>
