--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Feed RSS com filtro</title>
     <!-- Adiciona o CSS do Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Feed RSS com filtro</h1>
-        <form action="./rss" method="get">
-            <div class="form-group">
-                <label for="url">URL do feed RSS:</label>
-                <input type="url" class="form-control" id="url" name="url" required value="https://bj-share.info/feed.php?u=55179&f&c=1&l&h=61be1053">
-            </div>
-            <div class="form-group">
-                <label for="keyword">Palavra-chave para filtragem:</label>
-                <input type="text" class="form-control" id="keyword" name="keyword" required value="Dual">
-            </div>
-            <button type="submit" class="btn btn-primary">Filtrar</button>
-        </form>
-        <a href="./rss?url=https%3A%2F%2Fbj-share.info%2Ffeed.php%3Fu%3D55179%26f%26c%3D1%26l%26h%3D61be1053&keyword=Dual" class="btn btn-info mt-3">Acessar RSS filtrado</a>
+      <h1 class="mb-4">Feed RSS com filtro</h1>
+      <form action="./rss" method="get">
+        <div class="form-group">
+          <label for="url">URL do feed RSS:</label>
+          <input
+            type="url"
+            class="form-control"
+            id="url"
+            name="url"
+            required
+            value="https://bj-share.info/feed.php?u:55179;l;h:61be1053"
+          />
+        </div>
+        <div class="form-group">
+          <label for="keyword">Palavra-chave para filtragem:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="keyword"
+            name="keyword"
+            required
+            value="Dual"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Filtrar</button>
+      </form>
+      <a
+        href="./rss?url=https://bj-share.info/feed.php?u:55179;l;h:61be1053&keyword=Dual"
+        class="btn btn-info mt-3"
+        >Acessar RSS filtrado</a
+      >
     </div>
     <!-- Adiciona o JavaScript do Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
