--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             id="url"
             name="url"
             required
-            value="https://bj-share.info/feed.php?u:55179;l;h:61be1053"
+            value="https://bj-share.info/feed.php?u:184515;f;c:1;l;h:3f9d0d45"
           />
         </div>
         <div class="form-group">
@@ -37,7 +37,7 @@
         <button type="submit" class="btn btn-primary">Filtrar</button>
       </form>
       <a
-        href="./rss?url=https://bj-share.info/feed.php?u:55179;l;h:61be1053&keyword=Dual"
+        href="./rss?url=https://bj-share.info/feed.php?u:184515;f;c:1;l;h:3f9d0d45&keyword=Dual"
         class="btn btn-info mt-3"
         >Acessar RSS filtrado</a
       >
