--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Feed RSS com Filtro</title>
+    <meta charset="UTF-8" />
     <!-- Adiciona o CSS do Bootstrap -->
     <link
       rel="stylesheet"
