desabilitar modal idioma e voz. Adicionando select direto

--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,18 @@
                   <div class="row">
                       <!-- Botão para Selecionar o Idioma -->
                       <div class="col-md-4">
-                        <button type="button" id="languageButton" class="btn btn-outline-primary w-100 mb-3 text-truncate" data-toggle="modal" data-target="#languageModal" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
-                          Carregando Idiomas...
-                        </button>
+                        <select id="languageSelect" class="select-style w-100 mb-3">
+                          <option>Carregando Idiomas...</option>
+                          <!-- Opções de Idioma serão carregadas dinamicamente aqui -->
+                        </select>
                       </div>
   
                       <!-- Botão para Selecionar a Voz -->
                       <div class="col-md-8">
-                        <button type="button" id="voiceButton" class="btn btn-outline-primary w-100 mb-3 text-truncate" data-toggle="modal" data-target="#voiceModal" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
-                          Carregando Vozes...
-                        </button>
+                        <select id="voiceSelect" class="select-style w-100 mb-3">
+                          <option>Carregando Vozes...</option>
+                          <!-- Opções de Voz serão carregadas dinamicamente aqui -->
+                        </select>
                       </div>
                   </div>
   
